Fix color picker positioning on mobile

--- a/src/RoleConfigurator.css
+++ b/src/RoleConfigurator.css
@@ -73,7 +73,7 @@
 .RoleConfigurator .color-picker {
   position: absolute;
   top: 100%;
-  right: 0;
+  left: 0;
   margin-top: 8px;
   z-index: 10;
 }
